# reachy-claw

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  reachy-claw.example.yaml  reachy-claw.yaml
.github/workflows/: ci.yml
.playwright-cli/: page-2026-03-12T22-50-40-547Z.yml  page-2026-03-12T22-54-02-544Z.yml  page-2026-03-12T22-55-04-677Z.yml  page-2026-03-12T22-58-52-307Z.yml  page-2026-03-13T01-00-53-495Z.yml  page-2026-03-13T01-09-45-813Z.yml  page-2026-03-13T01-10-21-430Z.yml  page-2026-03-13T01-30-06-606Z.yml  page-2026-03-13T01-32-31-863Z.yml
action-skill/: .gitignore  SKILL.md  pyproject.toml
action-skill/src/reachy_claw/: __init__.py  bridge.py  config.py  tools.py
action-skill/tests/: test_bridge.py
deploy/: jetson
deploy/jetson/: Dockerfile  Dockerfile.daemon  Dockerfile.reachy-claw  deploy.sh  docker-compose.yml  jetson-speech.service  reachy-claw.jetson.yaml  sync.sh
deploy/jetson/app/: main.py  streaming_asr_service.py  tts_service.py
deploy/jetson/kiosk/: reachy-kiosk.sh
deploy/jetson/patches/: README.md  paraformer-eof-fix.patch
deploy/jetson/reachy/: .env.example  Dockerfile.daemon  Dockerfile.reachy-claw  docker-compose.dev.yml  docker-compose.yml  reachy-claw.jetson.yaml
deploy/jetson/udev/: 99-reachy-camera.rules  install.sh
deploy/jetson/vision-trt/: Dockerfile  entrypoint.sh
deploy/jetson/vision-trt/src/: capture.py  config.py  inference.py  server.py
deploy/jetson/vision-trt/static/: app.js  index.html
deploy/vision-hailo/: HEADS_UP.md  INSTALL.md  README.md  hailo_pipeline.py  producer.py  pyproject.toml
deploy/vision-hailo/models/: README.md  scrfd_2.5g.hef
deploy/vision-stub/: Dockerfile  README.md  face_db.py  producer.py  pyproject.toml
docs/superpowers/plans/: 2026-04-16-mode-state-machine.md
docs/superpowers/specs/: 2026-03-25-daily-diary-design.md  2026-04-16-mode-state-machine-design.md
scripts/: collect_daily_data.py  generate_diary.py  run_real.sh  run_sim.sh  test_e2e.py  test_full.py
skills/sensecraft/: SKILL.md  config.yaml
src/clawd_reachy_mini/: app.py  audio.py  backend_registry.py  config.py  gateway.py  main.py  plugin.py  reachy_app.py  stt.py  tts.py  vad.py
src/clawd_reachy_mini/motion/: __init__.py  emotion_mapper.py
src/clawd_reachy_mini/plugins/: __init__.py  conversation_plugin.py  face_tracker_plugin.py
src/clawd_reachy_mini/vision/: __init__.py
src/reachy_claw/: __init__.py  app.py  audio.py  backend_registry.py  config.py  elevenlabs.py  event_bus.py  gateway.py  llm.py  main.py  mode.py  plugin.py  reachy_app.py  skill_loader.py  stt.py  tts.py  vad.py
src/reachy_claw/modes/: __init__.py  conversation.py  interpreter.py  monologue.py
src/reachy_claw/motion/: emotion_mapper.py  head_target.py  head_wobbler.py
src/reachy_claw/plugins/: __init__.py  conversation_plugin.py  daily_log_plugin.py  dashboard_plugin.py  face_tracker_plugin.py  motion_plugin.py  vision_client_plugin.py
src/reachy_claw/plugins/dashboard_static/: app.js  diary.css  diary.js  index.html  style.css
src/reachy_claw/vision/: gst_camera.py  head_tracker.py  mediapipe_tracker.py
tests/: conftest.py  test_audio.py  test_config.py  test_conversation_plugin.py  test_dances.py  test_dashboard_plugin.py  test_e2e.py  test_elevenlabs.py  test_emotion_mapper.py  test_event_bus.py  test_face_tracker_plugin.py  test_full_e2e.py  test_gateway_protocol.py  test_head_target.py  test_head_wobbler.py  test_integration_sim.py  test_latency.py  test_main.py  test_modes.py  test_motion_plugin.py  test_plugin_lifecycle.py  test_remote_backends.py  test_remote_e2e.py  test_robot_commands.py  test_stt.py  test_tts.py  test_vision_client_plugin.py
