[project]
name = "reachy-claw-skill"
version = "0.1.0"
description = "OpenClaw skill for Reachy Mini robot integration"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
vision = [
    "reachy-mini[vision]",
]
audio = [
    "reachy-mini[audio]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_claw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
