[project]
name = "vision-hailo"
version = "0.1.0"
description = "Hailo-8 accelerated vision producer for reachy-claw"
requires-python = ">=3.11"
dependencies = [
    "pyzmq>=25.0",
    "msgpack>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Note: hailort is NOT a pip package - it comes from apt install hailo-all
# Create venv with --system-site-packages to inherit hailo_platform:
#   python3 -m venv --system-site-packages .venv