[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-stub"
version = "0.1.0"
description = "Wire-compatible drop-in replacement for vision-trt"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=25",
    "msgpack>=1.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
mediapipe = ["mediapipe>=0.10"]

[tool.setuptools]
py-modules = ["producer"]
